--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@angular/platform-browser": "^5.2.6",
     "@angular/platform-browser-dynamic": "^5.2.6",
     "@angular/router": "^5.2.6",
+    "angular-material": "^1.1.9",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.4",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.6",
     "@types/jasmine": "2.8.6",
     "@types/node": "~9.4.6",
